polarssldir=$(includedir)/polarssl

polarssl_HEADERS= \
aes.h \
aesni.h \
arc4.h \
asn1.h \
asn1write.h \
base64.h \
bignum.h \
blowfish.h \
bn_mul.h \
camellia.h \
certs.h \
cipher.h \
cipher_wrap.h \
compat-1.2.h \
config.h \
ctr_drbg.h \
debug.h \
des.h \
dhm.h \
ecdh.h \
ecdsa.h \
ecp.h \
entropy.h \
entropy_poll.h \
error.h \
gcm.h \
havege.h \
md2.h \
md4.h \
md5.h \
md.h \
md_wrap.h \
memory.h \
net.h \
oid.h \
openssl.h \
padlock.h \
pbkdf2.h \
pem.h \
pkcs11.h \
pkcs12.h \
pkcs5.h \
pk.h \
pk_wrap.h \
ripemd160.h \
rsa.h \
sha1.h \
sha256.h \
sha512.h \
ssl_cache.h \
ssl_ciphersuites.h \
ssl.h \
threading.h \
timing.h \
version.h \
x509_crl.h \
x509_crt.h \
x509_csr.h \
x509.h \
xtea.h 


EXTRA_DIST=$(polarssl_HEADERS)
